[gd_scene load_steps=3 format=3 uid="uid://daoecb6dyjk6j"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_p5keb"]
[ext_resource type="Theme" uid="uid://d15f0dapt5mq3" path="res://themes/font_theme_menu.tres" id="2_jv0ng"]

[node name="game_over" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_p5keb")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.301961)

[node name="Game Over" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -215.0
offset_right = 1466.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.293265, 0.293265)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 300
text = "GAME OVER"

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -70.0
offset_right = 68.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="Restart" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_jv0ng")
text = "Restart"

[node name="Menu" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_jv0ng")
text = "Menu"

[node name="Exit desktop" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_jv0ng")
text = "Exit desktop"

[connection signal="pressed" from="menu_holder/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menu_holder/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="menu_holder/Exit desktop" to="." method="_on_exit_desktop_pressed"]
